--- a/style.css
+++ b/style.css
@@ -32,11 +32,36 @@ body {
 }
 
 /* Hero  */
-.hero video {
+.hero {
   width: 100%;
-  height: 80%;
+  height: 100vh;
+}
+.hero video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
   object-fit: cover;
   pointer-events: none;
+}
+
+.hero .hero-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
+.hero .hero-content p {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 1.1rem;
+  letter-spacing: 0.1px;
+}
+.hero a {
+  border-radius: 1rem;
 }
 
 /* About  */
