--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background: #131313;
   padding: 0.8rem 4rem;
   z-index: 100;
+  border-bottom: solid 2px #00bf85;
 }
 #navbarSupportedContent .nav-item a {
   color: #f1f1f1;
@@ -65,6 +66,21 @@ body {
 }
 
 /* About  */
+.about {
+  background: #000;
+  color: white;
+}
+.about h6 {
+  color: #00bf85;
+  letter-spacing: 1px;
+}
+.about p {
+  color: #dddddd;
+  letter-spacing: 0.1px;
+}
+.about a {
+  border-radius: 1rem;
+}
 /* Discover  */
 /* Service  */
 /* Sign up  */
