--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
   color: #f1f1f1;
   margin: 0 0.3rem;
 }
-#navbarSupportedContent .nav-item a:hover {
+#navbarSupportedContent .nav-item a:hover,
+#navbarSupportedContent .nav-item a.active {
   color: var(--green-1);
 }
 #navbarSupportedContent button {
